--- a/compose.yaml
+++ b/compose.yaml
@@ -3,10 +3,10 @@ services:
     container_name: goapp
     image: goapp:1.0.0
     build:
-      context: ./backend
+      context: .
       dockerfile: go.dockerfile
     environment:
-      DATABASE_URL: 'postgres://postgres:postgres@db:5432/postgres?sslmode=disable'
+      DATABASE_URL: 'postgres://${DB_DATABASE}:${DB_PASSWORDD}@db:5432/${DB_DATABASE}?sslmode=disable'  
     ports:
       - '8000:8000'
     depends_on:
@@ -15,9 +15,9 @@ services:
     container_name: db
     image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${DB_USERNAME} 
+      POSTGRES_PASSWORD: ${DB_PASSWORD} 
+      POSTGRES_DB: ${DB_DATABASE}   
     ports:
       - 5432:5432
     volumes:
